0.6.1

  * Fixed snprintf size with forwardmsg in server.c
  * Fool-proofed reading inbox
  * Fixed jumping to certain server right after rehash
  * Call setvbuf only if statelog is enabled
  * stdout is no longer redirected in a file we cannot write to
  * Fixed buffer size in irc.c:irc_notice
  * Free forwardmsg in miauc.c:escape
  * Free memory if bind() fails (which causes miau to quit)
  * Fixed one-byte memory leak with logsuffix
  * Added an option to define time between forwardmsg commits
  * Fixed rpl_malloc/rpl_realloc handling
  * Changed hstrerror-handling
  * Fixed getopt
  * Optimized using va_lists in irc.c
  * Realloc-optimization in channels.c, automode.c
  * Changed logpostfix into logsuffix
  * Code cleanup (yes, it was a horrible mess and it's still a horrible mess)


0.6.0.2

  * Hopefully fix problems configure switches for once and for all.
  * Fix quicklog timestamping.
  * Change quicklog to use list.[ch] instead of obsolete llist.[ch]


0.6.0.1

  * Don't compile irc.c with DEBUG by default :-P


0.6.0 - "only 18446744073709551615 bugs remaining"

  * Security review. Secured tons of sprintfs and strcats.
  * Option "autoaway" to define when to set user away if ever
  * Option "chandiscon" to define what to do with channels when server
    drops the connection
  * Option not to redirect stdout into logfile
  * miau should finally get along with safe channels (#1245923)
  * "miau" no longer thinks it was kicked off a channel when "miau_" is kicked
  * Fix searching for channels
  * Changed ignore-list to be case insensitive
  * Fixed logging of modeless channels
  * Fixed illegal memory access at parting channel when chanlog compiled in
  * Fixed minor memory leak in rehash
  * Fixed nick rotation
  * Fixed sample-miaurc
  * Fixed nick comparison to be case insensitive at PART & KICK
  * Cleaned up client.c
  * Removed duplicated code in several places
  * Cleaned up extrn-stuff, includes, headers
  * Reworked configure.ac. Expect trouble.