@@ -1,5 +1,11 @@
 TODO:
 
+- support for CAPAB: strip out prefixes for clients that didn't ask for it
+
+- write enduserdebug as a macro (like in log_cannot_write)
+
+- try to reopen channel log file if not open already
+
 - review autoaway...
 
 - configure-option to disable forwardmsg
